test/expected/parse_empty_loop_body.out
shit: 2:16: error: Unable to parse the loop.
     2 |  while true; do done
       |                 ^~~~ here.
note: The body between 'do' and 'done' is empty, a command is required.
